[package]
name = "progrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
bracket-lib = "0.8.1"
specs = "0.17.0"
specs-derive = "0.4.1"
hecs = "0.7.7"
bevy_ecs = "0.7.0"

[profile.release]
incremental = true
